<resources>
    <string name="app_name">Manager Finansowy</string>
    <string name="add_button">Dodaj</string>
    <string name="place">Miejsce:</string>
    <string name="amount">Kwota:</string>
    <string name="date">Data:</string>
    <string name="category">Kategoria:</string>
    <string name="save">Zapisz</string>
    <string name="example_data_place">PrzykładoweDane</string>
    <string name="balance_label">Saldo obecnego miesiąca:</string>
    <string name="start_balance">0</string>
    <string name="chart_button">Zestawienie miesięczne</string>
    <string-array name="categories_array">
        <item>Jedzenie</item>
        <item>Mieszkanie</item>
        <item>Opłaty i rachunki</item>
        <item>Zdrowie, higiena i chemia</item>
        <item>Ubranie</item>
        <item>Relaks</item>
        <item>Rozrywka</item>
        <item>Transport</item>
        <item>Inne wydatki</item>
    </string-array>
</resources>